Add http client generation and fix builf failling issues and failling workflows
